# python-package_training

./: .travis.yml  Makefile  README.md  pyproject.toml  ruff.toml  setup.cfg
.github/workflows/: pyci.yml
hexlet_python_package/: __init__.py  half.py  user.py
hexlet_python_package/script/: hexlet_python_package.py
hexlet_python_package/scripts/: hexlet_python_package.py  main.py
tests/: test_half.py  test_users.py
