[tool.poetry]
name = "hexlet-python-package"
version = "0.3.0"
description = ""
authors = ["skip"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"

[project.scripts]
hexlet-python-package = "hexlet_python_package.scripts.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hexlet_python_package"]
